# teste-autoconf-cpp

./: Makefile.am  config.status  configure.ac  cpptesteautoconf.c
.devcontainer/: Dockerfile  Dockerfile.template  devcontainer.json
.github/workflows/: github-actions.yml
appconfig_0/: config.yaml  containerEnv  id_rsa  id_rsa.pub
autom4te.cache/: output.1  requests  traces.0  traces.1
config/: override.m4
